force-app/main/default/objects/Property__c/fields/Address_Last_Verified__c.field-meta.xml
<CustomField>
    <fullName>Address_Last_Verified__c</fullName>
    <label>Address Last Verified</label>
    <type>DateTime</type>
</CustomField>