force-app/main/default/objects/Property__c/fields/Address_Return_Code__c.field-meta.xml
<CustomField>
    <fullName>Address_Return_Code__c</fullName>
    <description>Used for a return value from the address
verification. Return values are: Confirmed,
Not Confirmed, Confirmed - By Dropping
Secondary Info, Confirmed - Missing
Secondary Info, or Not Submitted</description>
    <inlineHelpText>Used for a return value from the address
verification. Return values are: Confirmed,
Not Confirmed, Confirmed - By Dropping
Secondary Info, Confirmed - Missing
Secondary Info, or Not Submitted</inlineHelpText>
    <label>Address Return Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>