force-app/main/default/objects/Property__c/fields/Alternate_Name__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Name__c</fullName>
    <label>Alternate Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>