force-app/main/default/objects/Property__c/fields/CleanStreet__c.field-meta.xml
<CustomField>
    <fullName>CleanStreet__c</fullName>
    <label>CleanStreet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>