force-app/main/default/objects/Property__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <formula>Address_Line_1__c + &#39; &#39; + City__c + &#39; &#39; + State__c + &#39; &#39; + Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>