force-app/main/default/objects/Property__c/fields/Google_Verified__c.field-meta.xml
<CustomField>
    <fullName>Google_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Google Verified</label>
    <type>Checkbox</type>
</CustomField>