force-app/main/default/objects/Property__c/fields/Job_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Job_Address_Line_1__c</fullName>
    <label>Job Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>