force-app/main/default/objects/Property__c/fields/Job_Class__c.field-meta.xml
<CustomField>
    <fullName>Job_Class__c</fullName>
    <label>Job Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Educational - Private</fullName>
            </value>
            <value>
                <fullName>Educational - Public</fullName>
            </value>
            <value>
                <fullName>GSA</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Multi-Family</fullName>
            </value>
            <value>
                <fullName>Municipality/ Gov&apos;t</fullName>
            </value>
            <value>
                <fullName>Religious</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Educational</fullName>
            </value>
            <value>
                <fullName>Health Science</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>