force-app/main/default/objects/Property__c/fields/Job_County__c.field-meta.xml
<CustomField>
    <fullName>Job_County__c</fullName>
    <label>Job County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>