force-app/main/default/objects/Property__c/fields/Job_State__c.field-meta.xml
<CustomField>
    <fullName>Job_State__c</fullName>
    <label>Job State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>