force-app/main/default/objects/Property__c/fields/Job_Zip__c.field-meta.xml
<CustomField>
    <fullName>Job_Zip__c</fullName>
    <label>Job Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>