force-app/main/default/objects/Property__c/fields/LastUpdate__c.field-meta.xml
<CustomField>
    <fullName>LastUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LastUpdate</label>
    <type>Checkbox</type>
</CustomField>