force-app/main/default/objects/Property__c/fields/Lead_RRP_Apply__c.field-meta.xml
<CustomField>
    <fullName>Lead_RRP_Apply__c</fullName>
    <label>Lead RRP Apply?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>