force-app/main/default/objects/Property__c/fields/Length_of_City_Name__c.field-meta.xml
<CustomField>
    <fullName>Length_of_City_Name__c</fullName>
    <formula>LEN( City__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length of City Name</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>