force-app/main/default/objects/Property__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <label>Longitude</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>