force-app/main/default/objects/Property__c/fields/Market_Class__c.field-meta.xml
<CustomField>
    <fullName>Market_Class__c</fullName>
    <label>Market Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Non-Residential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>