force-app/main/default/objects/Property__c/fields/Market_Segment_Sub_Class__c.field-meta.xml
<CustomField>
    <fullName>Market_Segment_Sub_Class__c</fullName>
    <label>Market Segment Sub Class</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Market_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>K-12</fullName>
            </value>
            <value>
                <fullName>Higher Education</fullName>
            </value>
            <value>
                <fullName>Border Patrol</fullName>
            </value>
            <value>
                <fullName>Bureau of Land Management</fullName>
            </value>
            <value>
                <fullName>Central Intelligence Agency (CIA)</fullName>
            </value>
            <value>
                <fullName>General Services Admin (GSA)</fullName>
            </value>
            <value>
                <fullName>Department of Agriculture (USDA)</fullName>
            </value>
            <value>
                <fullName>Department of Commerce</fullName>
            </value>
            <value>
                <fullName>Department of Defense (DOD)</fullName>
            </value>
            <value>
                <fullName>Army</fullName>
            </value>
            <value>
                <fullName>Navy</fullName>
            </value>
            <value>
                <fullName>Air Force</fullName>
            </value>
            <value>
                <fullName>Marine Corps</fullName>
            </value>
            <value>
                <fullName>Coast Guard</fullName>
            </value>
            <value>
                <fullName>Department of Education</fullName>
            </value>
            <value>
                <fullName>Department of Energy</fullName>
            </value>
            <value>
                <fullName>Department of Health &amp; Human Services</fullName>
            </value>
            <value>
                <fullName>Department of Homeland Security (DHS)</fullName>
            </value>
            <value>
                <fullName>Department of Housing and Urban Development</fullName>
            </value>
            <value>
                <fullName>Department of Justice (DOJ)</fullName>
            </value>
            <value>
                <fullName>Department of Labor (DOL)</fullName>
            </value>
            <value>
                <fullName>Department of State (DOS)</fullName>
            </value>
            <value>
                <fullName>Department of the Interior</fullName>
            </value>
            <value>
                <fullName>Department of the Treasury</fullName>
            </value>
            <value>
                <fullName>Department of Transportation</fullName>
            </value>
            <value>
                <fullName>Department of Veterans Affairs (VA)</fullName>
            </value>
            <value>
                <fullName>Federal Bureau of Investigation (FBI)</fullName>
            </value>
            <value>
                <fullName>Fish and Wildlife Service</fullName>
            </value>
            <value>
                <fullName>National Guard</fullName>
            </value>
            <value>
                <fullName>National Park Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>