force-app/main/default/objects/Property__c/fields/Mortgage_Company__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Company__c</fullName>
    <label>Mortgage Company</label>
    <length>30</length>
    <type>Text</type>
</CustomField>