force-app/main/default/objects/Property__c/fields/Mortgage_Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Loan_Number__c</fullName>
    <label>Mortgage Loan Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>