force-app/main/default/objects/Property__c/fields/Mortgage_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Phone_Number__c</fullName>
    <label>Mortgage Phone Number</label>
    <type>Phone</type>
</CustomField>