force-app/main/default/objects/Property__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>