force-app/main/default/objects/Property__c/fields/TestAddress__c.field-meta.xml
<CustomField>
    <fullName>TestAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TestAddress</label>
    <type>Checkbox</type>
</CustomField>