force-app/main/default/objects/Property__c/fields/Year_Structure_Built__c.field-meta.xml
<CustomField>
    <fullName>Year_Structure_Built__c</fullName>
    <label>Year Structure Built</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>