force-app/main/default/objects/Property__c/fields/Year_Taken__c.field-meta.xml
<CustomField>
    <fullName>Year_Taken__c</fullName>
    <label>Year Taken</label>
    <length>50</length>
    <type>Text</type>
</CustomField>