force-app/main/default/objects/Property__c/fields/Zip_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Zip_Line_2__c</fullName>
    <label>Zip Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>