force-app/main/default/objects/Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Alternate_Name__c</columns>
    <columns>Address_Line_1__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Zip__c</columns>
    <columns>Property_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Job_Class__c</field>
        <operation>equals</operation>
        <value>Educational - Private,Educational - Public</value>
    </filters>
    <label>All</label>
</ListView>